--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/buljicS/studioP_23.git"
   },
-  "author": "",
+  "author": "Stefan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/buljicS/studioP_23/issues"
@@ -23,5 +23,8 @@
   "dependencies": {
     "rellax": "^1.12.1",
     "sass": "^1.58.0"
-  }
+  },
+  "keywords": [
+    "studiopresent"
+  ]
 }
